# esp32-camera

./: .codespellrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Kconfig  README.md  README_cam.md  idf_component.yml  library.json
.github/workflows/: build.yml  pre_commit.yml  upload_component.yml
conversions/: esp_img_timestamp.c  esp_jpg_decode.c  jpgd.c  jpge.cpp  libjpeg.c  tjpgd.c  to_bmp.c  to_jpg.cpp
conversions/include/: esp_img_timestamp.h  img_converters.h  libjpeg.h
conversions/private_include/: jpgd.h  jpge.h  tjpgdcnf.h
driver/: cam_hal.c  camera.c  esp_camera.c  esp_camera_af.c  sccb-ng.c  sccb.c  sensor.c  xclk.c
driver/include/: esp_camera.h  esp_camera_af.h  sensor.h
driver/private_include/: cam_hal.h  camera_common.h  sccb.h  xclk.h
examples/: take_picture.c
examples/basic/: CMakeLists.txt  Makefile  README.md
examples/basic/main/: take_picture.c
examples/camera_example/: CMakeLists.txt  sdkconfig.defaults
examples/camera_example/main/: CMakeLists.txt  camera_pinout.h  idf_component.yml  take_picture.c
examples/camera_example_common/: CMakeLists.txt
examples/main/: take_picture.c
examples/pic_server/: CMakeLists.txt  Makefile  README.md
examples/pic_server/main/: CMakeLists.txt  component.mk  pic_server.c  take_picture.c
sensors/: bf20a6.c  bf3005.c  gc0308.c  gc0328.c  gc032a.c  gc2145.c  hm0360.c  hm1055.c  mega_ccm.c  nt99141.c  ov2640.c  ov3660.c  ov5640.c  ov5640_af.c  ov7670.c  ov7725.c  sc030iot.c  sc031gs.c  sc101iot.c
sensors/private_include/: bf20a6.h  bf3005.h  gc0308.h  gc0308_regs.h  gc0308_settings.h  gc0328.h  gc0328_regs.h  gc0328_settings.h  gc032a.h  gc2145.h  gc2145_regs.h  gc2145_settings.h  hm0360.h  hm0360_regs.h  hm0360_settings.h  hm1055.h  hm1055_regs.h  hm1055_settings.h  mega_ccm.h  mega_ccm_regs.h  mega_ccm_settings.h  nt99141.h  nt99141_settings.h  ov2640.h  ov2640_regs.h  ov2640_settings.h  ov3660.h  ov3660_settings.h  ov5640.h  ov5640_af_firmware.h  ov5640_settings.h  ov7670.h  ov7670_regs.h  ov7725.h  sc030iot.h  sc031gs.h  sc031gs_settings.h  sc101iot.h
test/: CMakeLists.txt  test_camera.c
test/pictures/: test_rgb565be.rgb  test_rgb888.rgb  test_yuv422.yuv
